--- a/frontend/src/comps/NavbarComponent/navbar.css
+++ b/frontend/src/comps/NavbarComponent/navbar.css
@@ -1,12 +1,13 @@
 .navbar {
   width: 100%;
   font-size: 1.2rem;
-  color: aliceblue;
+  color: rgb(43, 73, 99);
   /* background-color: yellow; */
   display: flex;
   justify-content: space-between;
+  height: 75px;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.301);
+  background-color: rgba(49, 47, 47, 0.301);
   padding:  0px 20px;
   position: fixed;
 }
