--- a/frontend/src/comps/ResultCardComponent/result.css
+++ b/frontend/src/comps/ResultCardComponent/result.css
@@ -57,7 +57,7 @@ p{
     /* margin-top: 1px; */
     text-transform: none;
     font-size: 0.85rem;
-    color: white;
+    color: green;
 }
 .add{
     width: 120px;
