--- a/frontend/src/comps/Auth/styles/login.css
+++ b/frontend/src/comps/Auth/styles/login.css
@@ -34,10 +34,11 @@ form p {
     font-size: 11px;
     padding: 1px 8px;
     background-color: white;
+    
 }
 
 form label {
     font-size: 13px;
     padding: 0 10px 2px 10px;
-    color: gray;
+    color: black !important; 
 }
