--- a/frontend/src/comps/ProfileComponent/profile.css
+++ b/frontend/src/comps/ProfileComponent/profile.css
@@ -1,55 +1,41 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-
-#main{
-    background-color: rgba(223, 204, 204, 0.484);
-    /* padding: 0.5% 0% 5% 5%; */
-    height: 10vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    
-}
-#heading{
-    color: rgb(104, 141, 30);
-    padding-left: 5%;
-}
 #bar{
     display: flex;
+    min-height:560px;
 }
 #leftbar{ 
-    width: 23vw;
+    width: 20%;
+    padding: 2%;
+    text-align: center;
     background-color: rgb(210, 202, 202);
-    
 }
 #rightbar{
-    width: 77vw;
+    width: 80%;
     background-color: rgb(225, 218, 218);
     
 }
 .line{
-    margin-left: 10%;
-    margin-right: 10%;
+    width:100%;
     height: 1px;
 }
 .left{
-    text-align: center;
-    margin-top: 4vh;
-    margin-bottom: 2vh;
+    color:inherit;
+    text-decoration: none;
+    transition: color 0.1s ease-in;
+}
+.left:hover{
+    color:rgb(241, 165, 51)
 }
 #mainbox1{
     display: flex;
     margin-left: 8%;
     margin-top: 8%;
 }
-.box1{
-    height: 45vh;
-    width: 18vw;
-    background-color: white;
-    margin-right: 3%;
-    border: solid black 0.1vw;
+.service-box{
+    height: 250px;
+    width: 200px;
+    background-color: rgb(204, 198, 198);
+    margin: 3%;
+    margin-top: 0%;
     box-shadow: 1vh 0.4vw 3.2px 0px grey;
     border-radius: 2.5%;
 }
@@ -59,15 +45,21 @@
     margin-top: 2%;
 }
 .booknow{
-    padding-top: 31.2vh;
-    padding-left: 2vw;
-    
-
+    border: 1px solid black;
+}
+.booknow p{
+    text-align: center;
+    font-size: 20px;
+    color:rgb(15, 12, 12)
 }
 #pinfo{
     padding-top: 2vh;
     padding-left: vw;
     
+}
+.nothing{
+    margin-top:10%;
+    text-align: center;
 }
 h1{
     padding-left: 24vw;
