--- a/frontend/src/comps/Auth/styles/auth.css
+++ b/frontend/src/comps/Auth/styles/auth.css
@@ -1,7 +1,7 @@
 #wrapper{
     width:100%;
     height:100%;
-    background-color: blueviolet;
+    background-color: black;
     overflow: hidden !important;
     /* overflow-x: hidden !important; */
     min-height: 100vh;
@@ -11,7 +11,7 @@
     overflow-x: hidden !important;
     width: 70%;
     margin: 6% auto 0px auto;
-    background-color: #eee;
+    background-color: #393E46;
     height: 80%;
     display: flex;
     flex-direction: row;
@@ -47,7 +47,8 @@ form div button{
     width: 100%;
     outline: none;
     border: none;
-    background: linear-gradient(to right, blue, purple);
+    /* background: linear-gradient(to right, blue, purple); */
+    background-color: rgb(255, 191, 0);
     border-radius: 50px;
     color: white;
     padding: 13px 10px;
@@ -61,6 +62,14 @@ form div button:hover{
 .auth-container a {
     font-size: 13px;
     text-decoration: none;
-    color: royalblue;
+    color: rgb(255, 191, 0);
     font-weight : 500;
+}
+#finger-scan{
+    height: 400px;
+    width: 85%;
+    margin-top: 15px;
+}
+.sm-p{
+    color:rgba(255, 192, 1, 0.721)
 }
