--- a/frontend/src/comps/Auth/styles/login.css
+++ b/frontend/src/comps/Auth/styles/login.css
@@ -8,7 +8,7 @@
 
 h2~p{
     padding-left: 1%;
-    color:gray
+    color:rgb(255, 191, 0)
 }
 
 form{
@@ -41,7 +41,7 @@ form select{
     width: 200px;
     height:40px;
     font-size: 15px;
-    border: 2px solid gray;
+    border: 2px solid rgb(255, 191, 0);
 }
 form div{
     position: relative;
@@ -63,8 +63,11 @@ form .p {
 form label {
     font-size: 13px;
     padding: 0 10px 2px 10px;
-    color: black !important; 
+    color: rgb(255, 191, 0) !important; 
 }
 Link{
     text-decoration: underline;
+}
+.login-h2{
+    color: rgb(255, 191, 0);
 }
