--- a/frontend/src/comps/NavbarComponent/navbar.css
+++ b/frontend/src/comps/NavbarComponent/navbar.css
@@ -33,7 +33,7 @@
 
 .navbar-links li {
   position: relative;
-  width:20%;
+  /* width:20%; */
   height: 50%;
   border-radius: 5px;
   font-size: 1.0rem;
