--- a/frontend/src/comps/ResultCardComponent/result.css
+++ b/frontend/src/comps/ResultCardComponent/result.css
@@ -16,15 +16,20 @@
     width: 37%;
     height: 190px;
 }
-
-.innerbox{
-    height: 80%;
+.service-img{
+    height: 70%;
     width: 30%;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+/* .innerbox{
+    height: 80%;
+    width: 50%;
     margin: 15px 0px 20px 15px;
     border-radius: 15px;
     background-color: rgba(100, 100, 100, 0.744);
     background-color: wheat;
-}
+} */
 .desc{
     width: 60%;
     height:90%;
