--- a/frontend/src/comps/CartComponent/cart.css
+++ b/frontend/src/comps/CartComponent/cart.css
@@ -1,34 +1,51 @@
+.box-c{
+    /* border:3px solid rgb(255, 251, 214); */
+    margin: 10px auto;
+    padding: 7px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 15px;
+    box-shadow: 3px 3px 8px 2px rgba(188, 188, 188, 0.119);
+    font-family:Poppins,sans-serif;
+    font-size: 1.1rem;
+    color: rgba(255, 255, 255, 0.719);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 33%;
+    height: 180px;
+}
 #cart-wrapper{
-    width:100%;
-    height:100vh;
-    margin-top: -65px;
-    padding-top: 65px;
-    background-color: rgb(104, 60, 6);
+    background-color: #141c29;
+
+    padding: 10px;
+}
+#cart-img{
+    border-radius: 5px;
+    width: 35%;
+    height: 90%;
+    margin-left: 10px;
 }
 #cart-container{
     padding-left: 5%;
-    width:100%;
-    height:95%;
+    height: 100vh;
+}
+.item-c{
+    color: white;
 }
 #cart-area{
     width:60%;
-    /* display: flex; */
-    /* justify-content: flex-start; */
-    /* flex-wrap: wrap; */
-    /* flex-direction: column; */
-    min-height:500px;
-    height: 500px;
-    overflow-y: scroll;
 }
-#cart-area::-webkit-scrollbar{
-    /* display: none; */
+.desc-c p,span{
+    color: #0d1117;
 }
 #all-area{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px;
 }
-.innerbox{
-    width:20%;
-    margin-left: -5%;
+.innerbox-c{
+
 }
 #item-card{
     justify-content:space-around;
@@ -42,16 +59,25 @@
     /* border: 1px solid black; */
     
 }
-.desc{
-    margin-left:-10% ;
+.desc-c{
+    /* margin-left:-20% ; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
-.delete-btn{
+.delete-btn-c{
+    margin-left: 30px;
     width:80px;
 }
 #amount-area{
     width:35%;
+    height: 80%;
     /* border: 1px solid black; */
     display: flex;
+}
+#amount-area-a{
+    height: 100%;
 }
 #amount-area>div{
     display: flex;
@@ -80,3 +106,4 @@
 #amount-area>div button{
     width:100px;
 }
+
