--- a/frontend/src/comps/ServicesHomeComponent/service.css
+++ b/frontend/src/comps/ServicesHomeComponent/service.css
@@ -1,10 +1,10 @@
 
 #service{
-  padding: 20px 5px;
+  padding: 30px 5px;
 }
 
 .sectionheading{
-  padding: 0 10px 10px 0;
+  padding: 0 10px 10px 0px;
 }
 
 .sectionheading > h2{
@@ -25,16 +25,16 @@ section > div {
   text-align: center;
 }
 .card {
-  width: 100%;
-  padding: 10px;
+  width: 86%;
+  padding: 20px;
   box-sizing: border-box;
-  background: linear-gradient(#ffffff 50%, #2c7bfe 50%);
+  background: linear-gradient(#ffffff 50%, #a9c616 50%);
   background-size: 100% 200%;
-  background-position: 0 2.5%;
+  background-position: 0 2%;
   border-radius: 4px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.12);
   cursor: pointer;
-  transition: 0.5s;
+  transition: 0.8s;
 }
 h3 {
   font-size: 20px;
