--- a/frontend/src/comps/ServicesHomeComponent/service.css
+++ b/frontend/src/comps/ServicesHomeComponent/service.css
@@ -1,6 +1,7 @@
 
 #service{
   padding: 30px 5px;
+  /* background-color: #575a7b; */
 }
 
 .sectionheading{
@@ -23,6 +24,29 @@ section > div {
   width: 100%;
   padding: 0 1em 1em 1em;
   text-align: center;
+}
+.serc-img-00{
+  width: 24%;
+  transition: transform 2s cubic-bezier(0.4, 0.3, 0.2, 0.1);
+  will-change: transform;
+}
+.serc-img-01:hover{
+  transform: scale(1.15);
+}
+.serc-img-02:hover{
+  transform: scale(1.15);
+}
+.serc-img-03:hover{
+  transform: scale(1.15);
+}
+.serc-img-04:hover{
+  transform: scale(1.15);
+}
+.src-cards-4{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  z-index: 2;
 }
 .card {
   width: 86%;
