--- a/frontend/src/comps/CartComponent/cart.css
+++ b/frontend/src/comps/CartComponent/cart.css
@@ -27,14 +27,46 @@
 }
 #cart-container{
     padding-left: 5%;
-    height: 100vh;
+    height: 550px;
 }
 .item-c{
     color: white;
 }
 #cart-area{
     width:60%;
+    height:500px;
+    overflow: scroll;
+    overflow-x: hidden;
 }
+#cart-area::-webkit-scrollbar {
+  width: 10px;
+  width: 10px;
+}
+#cart-area::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #141C29;
+}
+
+#cart-area::-webkit-scrollbar-track:hover {
+  background-color: #141C29;
+}
+
+#cart-area::-webkit-scrollbar-track:active {
+  background-color: #141C29;
+}
+
+#cart-area::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #AAABAC;
+}
+
+#cart-area::-webkit-scrollbar-thumb:hover {
+  background-color: #8D8E8F;
+}
+
+#cart-area::-webkit-scrollbar-thumb:active {
+  background-color: #8D8E8F;
+}   
 .desc-c p,span{
     color: #0d1117;
 }
