--- a/frontend/src/comps/ProfileComponent/profile.css
+++ b/frontend/src/comps/ProfileComponent/profile.css
@@ -1,6 +1,6 @@
 #bar{
     display: flex;
-    min-height:560px;
+    min-height:570px;
     font-family: 'Lato', sans-serif;
 }
 #leftbar{ 
@@ -13,6 +13,7 @@
 #rightbar{
     width: 80%;
     background-color: rgb(225, 218, 218);
+    background-color: #222831;
     
 }
 .line{
@@ -31,15 +32,46 @@
     display: flex;
     flex-wrap: wrap;
     padding: 40px;
-    height: 100%;
-    background-color: #222831;
+    height: 550px;
+    overflow: scroll;
+    overflow-x: hidden;
 }
+
+#mainbox1::-webkit-scrollbar {
+  width: 10px;
+  width: 10px;
+}
+#mainbox1::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #141C29;
+}
+
+#mainbox1::-webkit-scrollbar-track:hover {
+  background-color: #141C29;
+}
+
+#mainbox1::-webkit-scrollbar-track:active {
+  background-color: #141C29;
+}
+
+#mainbox1::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #AAABAC;
+}
+
+#mainbox1::-webkit-scrollbar-thumb:hover {
+  background-color: #8D8E8F;
+}
+
+#mainbox1::-webkit-scrollbar-thumb:active {
+  background-color: #8D8E8F;
+}   
 .service-box{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 450px;
+    height: 400px;
     width: 350px;
     background-color: #a4a4a4;
     color: black;
@@ -65,7 +97,7 @@
     align-items: center;
 }
 .booknow table{
-    width: 200px;
+    width: 270px;
 }
 .booknow tr{
     border: none;
@@ -81,8 +113,12 @@
     padding: 2px;
     width: 65%;
     font-size: 1.1rem;
-    color: #222831;
+    color: #c1cddf;
     border: none;
+    transition: all ease-in-out 0.2s;
+}
+.delete-btn-sc:hover{
+    background-color: rgb(245, 64, 64);
 }
 .empty-01{
     background-color: #222831;
