--- a/frontend/src/comps/Auth/styles/auth.css
+++ b/frontend/src/comps/Auth/styles/auth.css
@@ -74,6 +74,30 @@ form div button:hover{
     width: 85%;
     margin-top: 15px;
 }
+#signup-div{
+    display: inline-block;
+    height: 50px;
+    overflow: hidden;
+}
 .sm-p{
     color:rgb(255, 192, 1)
+}
+@media screen and (max-width:425px) {
+    
+    .auth-container{
+        overflow-x: hidden !important;
+        width: 90%;
+        margin: 6% auto 0px auto;
+        background-color: #393E46;
+        height: 80%;
+        display: flex;
+        flex-direction: row;
+    }
+    
+}
+@media screen and (max-width:768px) {
+    .auth-right{
+        display: none;
+    }
+    
 }
