--- a/frontend/src/comps/HomeComponent/home.css
+++ b/frontend/src/comps/HomeComponent/home.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
-body {
+/* body {
     margin: 0;
     padding: 0;
-}
+} */
 
 .mycontainer {
     display: flex;
@@ -49,4 +49,42 @@ body {
 }
 #namaste-h1{
   padding: auto;
+}
+@media screen and (max-width:768px) {
+  .mycontainer {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    margin-top:-65px;
+    height: 80vh;
+    background-image: url('https://res.cloudinary.com/urbanclap/image/upload/images/growth/home-screen/1615375782838-f890f8.jpeg');
+    background-size: cover;
+    width:100%;
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: Arial, sans-serif;
+  }
+  
+}
+@media screen and (max-width:425px) {
+  .mycontainer {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    margin-top:-65px;
+    height: 60vh;
+    background-image: url('https://res.cloudinary.com/urbanclap/image/upload/images/growth/home-screen/1615375782838-f890f8.jpeg');
+    background-size: cover;
+    width:100%;
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: Arial, sans-serif;
+  }
+  #home-search-button,#search{
+    width:200px;
+  }
 }
