--- a/frontend/src/comps/NavbarComponent/navbar.css
+++ b/frontend/src/comps/NavbarComponent/navbar.css
@@ -55,6 +55,8 @@ li:hover{
   flex-direction: row;
   justify-content: space-between;
   background-color: #191919;
+  z-index: 4;
+  
 }
 #website-name {
   font-size: 35px;
@@ -80,3 +82,14 @@ li:hover{
   align-items: center;
   margin-right: 20px;
 }
+@media screen and (max-width:768px) {
+  .navbar-links{
+    width:50%
+  }
+}
+@media screen and (max-width:425px) {
+  .navbar-links{
+    width:70%
+  }
+}
+
