--- a/frontend/src/comps/ProfileComponent/profile.css
+++ b/frontend/src/comps/ProfileComponent/profile.css
@@ -254,3 +254,73 @@
     color: black;
     padding: 9px;
 }
+@media screen and (max-width:1024px) {
+    .delete-p, .del-p-d{
+        font-size: 0.8em;
+    }
+    .service-box{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 390px;
+        width: 300px;
+        background-color: #a4a4a4;
+        color: black;
+        margin: 15px;
+        border-radius: 10px;
+    }
+}
+@media screen and  (max-width:425px)  {
+    #buttons{
+        flex-direction: column;
+        align-items: center;
+    }
+    .delete-p, .del-p-d{
+        width:150px;
+        font-size: 1em;
+    }
+    #leftbar{
+        width:35%;
+    }
+    #rightbar{
+        width:65%;
+    }
+    #pi{
+        padding-top: 5%;
+        width: 85%;
+        display: flex;
+        justify-content:space-around;
+    }
+    #pi h5{
+        padding-left: 20%;
+        font-size: 14px;
+        width: 120%;
+        color: rgb(255, 162, 0);
+    }
+    .pro-inps input{
+        margin-left: 20%;
+        width:100%;
+    }
+    #mainbox1{
+        padding:0;
+    }
+    .service-box{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 390px;
+        width: 250px;
+        background-color: #a4a4a4;
+        color: black;
+        margin: 15px;
+        border-radius: 10px;
+    }
+    #bar{
+        height:500px;
+    }
+    .booknow table{
+        width: 100%;
+    }
+}
