--- a/frontend/src/comps/ResultCardComponent/result.css
+++ b/frontend/src/comps/ResultCardComponent/result.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 37%;
+    width: 500px;
     height: 190px;
 }
 .p-r-c{
@@ -89,5 +89,72 @@ button:active{
     float: right;
     margin-right: 90px;
     color: whitesmoke;
-
+    
 } */
+@media screen and (max-width:1024px) {
+    
+.box-r{
+    /* border:3px solid rgb(255, 251, 214); */
+    margin: 10px auto;
+    padding: 7px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 15px;
+    box-shadow: 3px 3px 8px 2px rgb(128, 128, 128);
+    font-family:Poppins,sans-serif;
+    font-size: 1.1rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 400px;
+    height: 190px;
+}
+
+}
+@media screen and (max-width:768px) {
+    
+.box-r{
+    /* border:3px solid rgb(255, 251, 214); */
+    margin: 3% auto;
+    padding: 7px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 15px;
+    box-shadow: 3px 3px 8px 2px rgb(128, 128, 128);
+    font-family:Poppins,sans-serif;
+    font-size: 1.1rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 500px;
+    height: 190px;
+}
+    
+}
+@media screen and (max-width:425px) {
+    
+.box-r{
+    /* border:3px solid rgb(255, 251, 214); */
+    margin: 3% auto;
+    padding: 7px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 15px;
+    box-shadow: 3px 3px 8px 2px rgb(128, 128, 128);
+    font-family:Poppins,sans-serif;
+    font-size: 1.1rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 370px;
+    height: 180px;
+}
+
+.desc-p-r{
+    margin:0;
+    font-size: 0.7em;
+    color:#a8a5a5;
+    text-align: left;
+    width:100%;
+}
+}
