--- a/frontend/src/comps/ResultsComponent/results.css
+++ b/frontend/src/comps/ResultsComponent/results.css
@@ -17,8 +17,10 @@
 }
 .BOX{
     display: flex;
-    
+    min-height: 600px;
     flex-wrap: wrap !important;
+    justify-content: flex-start;
+    align-items:flex-start;
 }
 #nothing{
     margin: auto 10% ;
@@ -27,4 +29,10 @@
 }
 Button{
     width:10%;
+}
+@media screen and (max-width:425px) {
+    Button{
+        width:20%;
+    }
+    
 }
