--- a/frontend/src/comps/ProfileComponent/profile.css
+++ b/frontend/src/comps/ProfileComponent/profile.css
@@ -256,7 +256,12 @@
 }
 @media screen and (max-width:1024px) {
     .delete-p, .del-p-d{
+        width:200px;
         font-size: 0.8em;
+    }
+    #buttons{
+        flex-direction: column;
+        align-items: center;
     }
     .service-box{
         display: flex;
